@@ -15,7 +15,7 @@
     along with this program; if not, write to the Free Software
     Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
-// $Id: nameserver.cc,v 1.5 2003/01/13 15:39:17 ahu Exp $ 
+// $Id: nameserver.cc,v 1.6 2003/09/16 21:02:35 ahu Exp $ 
 #include "utility.hh"
 #include <cstdio>
 #include <cstring>
@@ -110,7 +110,7 @@ void UDPNameserver::bindIPv4()
       h=gethostbyname(localname.c_str());
       if(!h)
         throw AhuException("Unable to resolve local address"); 
-    
+
       locala.sin_addr.s_addr=*(int*)h->h_addr;
     }
 
@@ -122,7 +122,7 @@ void UDPNameserver::bindIPv4()
     }
     d_highfd=max(s,d_highfd);
     d_sockets.push_back(s);
-    L<<Logger::Error<<"UDP server bound to "<<localname<<":"<<arg()["local-port"]<<endl;
+    L<<Logger::Error<<"UDP server bound to "<<inet_ntoa(locala.sin_addr)<<":"<<arg()["local-port"]<<endl;
     FD_SET(s, &d_rfds);
   }
 }
